fix(progress-spinner): remove gap if ng-content is not provided

--- a/packages/components/progress-spinner/progress-spinner.scss
+++ b/packages/components/progress-spinner/progress-spinner.scss
@@ -13,8 +13,6 @@
 .kbq-progress-spinner {
     display: flex;
     flex-direction: row;
-
-    gap: var(--kbq-progress-spinner-size-compact-content-gap-horizontal);
 }
 
 .kbq-progress-spinner__circle {
@@ -39,11 +37,13 @@
     .kbq-progress-spinner-text {
         margin-bottom: var(--kbq-progress-spinner-size-compact-content-gap-vertical);
     }
+
+    &:not(:empty) {
+        margin-inline-start: var(--kbq-progress-spinner-size-compact-content-gap-horizontal);
+    }
 }
 
 .kbq-progress-spinner_big {
-    gap: var(--kbq-progress-spinner-size-big-content-gap-horizontal);
-
     & .kbq-progress-spinner__inner {
         width: var(--kbq-progress-spinner-size-big-size);
         height: var(--kbq-progress-spinner-size-big-size);
@@ -51,6 +51,12 @@
 
     & .kbq-progress-spinner__circle {
         stroke-width: 6%;
+    }
+
+    & .kbq-progress-spinner__content {
+        &:not(:empty) {
+            margin-inline-start: var(--kbq-progress-spinner-size-big-content-gap-horizontal);
+        }
     }
 }
 
